trunk/Archive2/57/e5042789b43bd2/output
main.cpp:10:5: error: no matching function for call to 'foo'
    foo(x);
    ^~~
main.cpp:5:6: note: candidate template ignored: substitution failure : deduced non-type template argument does not have the same type as the its corresponding template parameter ('int' vs 'unsigned int')
void foo(X<U>) { };
     ^
1 error generated.
